src/scss/main.scss
@import "_normalize";
@import "_variables";
@import url('https://fonts.googleapis.com/css?family=Rubik:400,700&display=swap&subset=latin-ext');

// reset

html {
  box-sizing: border-box;
  scroll-behavior: smooth;
}

*,
*:before,
*:after {
  box-sizing: inherit;
}

// body
body {
  font-family: 'Rubik', sans-serif;
  background: #FFFFEA;
  background-size: 20px 20px;
  background-image: linear-gradient(to right, #e9f0f0 1px, transparent 1px), linear-gradient(to bottom, #e9f0f0 1px, transparent 1px);

  @media (min-width: 768px) and (orientation: portrait) {
    font-size: 1.2rem;
  }

  @media (min-width: 768px) and (orientation: portrait) {
    font-size: 1.6rem;
  }

  @media (min-width: 1366px) {
    font-size: 1.4rem;
  }
}

/*button menu */
.menuButton,
.article__button {
  display: flex;
  justify-content: center;
  align-items: center;
  position: fixed;
  width: 4rem;
  height: 4rem;
  right: 0;
  bottom: 0;
  padding: 0;
  margin: 2rem;
  border: 3px solid #1a1a1a;
  background: #fefefe;
  transform: rotate(90deg);
  z-index: 2;
}

.menuButton {
  &:hover {
    cursor: pointer;
  }

  &__line {
    font-size: 3rem;
    color: #1a1a1a;
    transform: rotate(45deg);

    &--on {
      animation-name: line-on;
      animation-duration: .6s;
      animation-fill-mode: both;
    }

    &--off {
      animation-name: line-off;
      animation-duration: .6s;
      animation-fill-mode: both;
    }
  }

  &__switch {
    &--off {
      animation-name: switch-off;
      animation-duration: .6s;
      animation-fill-mode: both;
    }
  }

  &__switch {
    &--on {
      animation-name: switch-on;
      animation-duration: .6s;
      animation-fill-mode: both;
    }
  }
}

.article__button.article__button--position {
  left: 0;
  transform: rotate(0deg);
}

.menu-on {
  animation-name: menu-on;
  animation-duration: .6s;
  animation-fill-mode: both;
}

.menu-off {
  animation-name: menu-off;
  animation-duration: .6s;
  animation-fill-mode: both;
}

.strong__header {
  text-transform: uppercase;
}

@keyframes line-off {
  from {
    transform: rotate(135deg);
    color: #efefef;
  }

  to {
    transform: rotate(45deg);
    color: #1a1a1a;
  }
}

@keyframes line-on {
  from {
    transform: rotate(45deg);
    color: #1a1a1a;
  }

  to {
    transform: rotate(135deg);
    color: #fff;
  }
}

@keyframes switch-off {
  from {
    background-color: #1a1a1a;
    border-color: #fefefe;
  }

  to {
    background-color: #fefefe;
    border-color: #1a1a1a;
  }
}

@keyframes switch-on {
  from {
    background-color: #fefefe;
    border-color: #1a1a1a;
  }

  to {
    background-color: #1a1a1a;
    border-color: #fefefe;
  }
}

@keyframes menu-on {
  from {
    transform: translateX(-100%);
  }

  to {
    transform: translateX(0);
  }
}

@keyframes menu-off {
  from {
    transform: translateX(0);
  }

  to {
    transform: translateX(-100%);
  }
}

// menu
.menu {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  background: #8B7871;
  transform: translateX(-100%);
  padding: 2rem;
  z-index: 1;

  &__header {
    @media (min-width: 1366px) {
      text-align: center;
      margin: 20px 20px;
    }
  }

  &__section {
    display: none;

    @media (min-width: 904px) {
      display: flex;
      flex-direction: column;
      align-items: center;
      width: 100%;
      max-width: 660px;
    }

    @media (min-width: 1024px) {
      width: 100%;
      max-width: 900px;
    }

    @media (min-width: 1366px) {
      font-size: 1.1rem;
    }
  }

  &__list {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    padding: 8px;

    @media (min-width: 568px) and (orientation: landscape) {
      flex-direction: row;
      flex-wrap: wrap;
      justify-content: space-between;
    }

    @media (min-width: 640px) and (orientation: landscape) {
      flex-direction: row;
      flex-wrap: wrap;
      justify-content: space-between;
    }

    @media (min-width: 850px) and (orientation: landscape) {
      margin: 0;
    }

    @media (min-width: 1366px) {
      display: grid;
      grid-template-columns: repeat(4, 1fr);
      grid-gap: 8px;
    }
  }

  &__item {
    margin-top: 1rem;
    list-style: none;

    @media (min-width: 640px) and (orientation: landscape) {
      margin: 1rem;
    }

    @media (min-width: 1366px) {
      margin: 0;
    }
  }

  &__link {
    font-size: 1rem;
    color: #FFFFEA;
    text-decoration: none;
    transition: color .2s linear;

    &:hover {
      color: rgba(255, 255, 234, 0.7);

      @media (min-width: 1366px) {
        color: #1a1a1a;
        background-color: rgba(0, 0, 0, 0.15);
      }
    }

    @media (min-width: 360px) and (orientation: portrait) {
      font-size: 1.2rem;
    }

    @media (min-width: 640px) and (orientation: landscape) {
      font-size: 1rem;
    }

    @media (min-width: 1366px) {
      display: flex;
      flex-direction: column;
      width: 250px;
      height: 200px;
      border: 1px solid black;
      text-decoration: none;
      text-transform: none;
      color: black;
      padding: 10px;
      transition: background-color .2s linear;
    }
  }

  &__description {
    display: none;

    @media (min-width: 1366px) {
      display: flex;
      flex-direction: column;
      justify-content: center;
      align-items: flex-start;
      height: auto;
      line-height: 1.4rem;
      padding: 0;
      margin: 10px;
      transform: none;
    }
  }

  &__text {
    @media (min-width: 904px) {
      max-width: 800px;
      width: 100%;
      margin: 20px auto;
      text-align: center;
    }

    @media (min-width: 1024px) {
      max-width: 800px;
      width: 100%;
      margin: 20px auto;
      text-align: center;
    }

    @media (min-width: 1366px) {
      max-width: 900px;
      width: 100%;
    }
  }

  @media (min-width: 904px) {
    align-items: center;
  }
}
/* ... */

